--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="container">
     <h1>模范炮兵连</h1>
     <video controls>
-        <source src="./shipin/模范.mp4" type="video/mp4">
+        <source src="./模范.mp4" type="video/mp4">
         您的浏览器不支持视频标签。
     </video>
     <div class="text-content">
