--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         .text-content {
             margin-top: 20px;
             text-indent: 2em; /* 首行缩进两个字符 */
+            text-align: justify; /* 文字两端对齐 */
+            text-justify: inter-word; /* 使用单词间空白进行对齐 */
         }
         @media (min-width: 600px) {
             .container {
