--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 <div class="container">
     <h1>模范炮兵连</h1>
-    <video controls>
+    <video controls poster="./模范封面.jpg">
         <source src="./模范.mp4" type="video/mp4">
         您的浏览器不支持视频标签。
     </video>
